clean notebooks 	modified:   Part-1-Matrix-Factorization-Recommendation-Retrieval.ipynb 	modified:   Part-2-Scalable-Recommendation-Retrieval-with-Locality-Sensitive-Hashing.ipynb 	modified:   Part-3-Indexable-Representation.ipynb

--- a/Part-1-Matrix-Factorization-Recommendation-Retrieval.ipynb
+++ b/Part-1-Matrix-Factorization-Recommendation-Retrieval.ipynb
@@ -22,7 +22,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -101,7 +103,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import re\n",
@@ -122,7 +126,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# split data into train/test pair with 70/30 ratio.\n",
@@ -133,18 +139,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train PMF algorithm with Movielens 20M dataset"
+    "### Train PMF algorithm with Movielens 1M dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# learning from the training data\n",
     "pmf = PMF()\n",
-    "pmf.set_params({\"num_feat\": 100, \"epsilon\": 1, \"_lambda\": 0.1, \"maxepoch\": 150, \"num_batches\": 100})\n",
+    "pmf.set_params({\"num_feat\": 100, \"epsilon\": 1, \"_lambda\": 0.1, \"maxepoch\": 100, \"num_batches\": 100})\n",
     "print(\"#users: {0} -- #items: {1} -- #factors: {2}\".format(len(np.unique(ratings[:, 0])), len(np.unique(ratings[:, 1])), pmf.num_feat))\n",
     "\n",
     "# training PMF with Movielens dataset\n",
@@ -164,7 +172,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#save model, training/testing data for future use\n",
@@ -202,7 +212,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "computation_time = []\n",
@@ -238,7 +250,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "computation_time = []\n",
@@ -284,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
