--- a/Part-2-Scalable-Recommendation-Retrieval-with-Locality-Sensitive-Hashing.ipynb
+++ b/Part-2-Scalable-Recommendation-Retrieval-with-Locality-Sensitive-Hashing.ipynb
@@ -14,7 +14,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -33,13 +35,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#load train/test data and trained pmf model\n",
     "path_to_model = 'pmf_mvl1m.model'\n",
     "path_to_train_data = 'train_data'\n",
-    "path_to_tets_data  = 'test_data'\n",
+    "path_to_test_data  = 'test_data'\n",
     "\n",
     "pmf_mvl = pickle.load(open(path_to_model, 'rb'))\n",
     "train   = pickle.load(open(path_to_train_data, 'rb'))\n",
@@ -65,7 +69,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# measuring performance of the first 2000 users\n",
@@ -113,12 +119,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "topK = 10\n",
     "b_vals = [4, 6, 8]\n",
-    "L_vals = [10]\n",
+    "L_vals = [5, 10]\n",
     "\n",
     "#queries = pmf_mvl.w_User\n",
     "#data    = pmf_mvl.w_Item\n",
@@ -147,16 +155,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#apply Xbox transformation\n",
     "topK = 10\n",
     "b_vals = [4, 6, 8]\n",
-    "L_vals = [10]\n",
+    "L_vals = [5, 10]\n",
     "\n",
-    "#queries = pmf_mvl.w_User\n",
-    "#data    = pmf_mvl.w_Item\n",
     "\n",
     "M = np.linalg.norm(data, axis=1)\n",
     "max_norm = max(M)\n",
@@ -179,7 +187,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -200,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
