clean notebooks 	modified:   Part-3-Indexable-Representation.ipynb

--- a/Part-3-Indexable-Representation.ipynb
+++ b/Part-3-Indexable-Representation.ipynb
@@ -89,10 +89,10 @@
    },
    "outputs": [],
    "source": [
-    "#rec_bpr = BPR(k = 10, max_iter=5, learning_rate=0.01, lamda=0.001, batch_size=5000, init_params={'U':None, 'V':None})\n",
+    "#rec_bpr = BPR(k = 10, max_iter=20, learning_rate=0.01, lamda=0.001, batch_size=5000, init_params={'U':None, 'V':None})\n",
     "#rec_bpr.fit(eval_method.train_set)\n",
-    "\n",
     "#pickle.dump(rec_bpr, open('bpr.model', 'wb'))\n",
+    "\n",
     "rec_bpr = pickle.load(open('bpr.model', 'rb'))"
    ]
   },
@@ -109,15 +109,6 @@
     "\n",
     "queries = rec_bpr.U[1:1000,:]\n",
     "data    = rec_bpr.V\n",
-    "\n",
-    "M = np.linalg.norm(data, axis=1)\n",
-    "max_norm = max(M)\n",
-    "q_norm = np.sqrt((queries * queries).sum(axis=1))\n",
-    "n_queries = queries/q_norm.reshape(queries.shape[0], 1)\n",
-    "\n",
-    "n_data = np.concatenate((data, np.sqrt(max_norm**2 - pow(M, 2)).reshape(data.shape[0], -1)), axis = 1)\n",
-    "n_data = n_data/max_norm # normalized data vectors\n",
-    "n_queries = np.concatenate((n_queries, np.zeros((n_queries.shape[0], 1))), axis = 1)\n",
     "        \n",
     "bpr_prec, bpr_recall = evaluate_topK(test, data, queries, topK)\n",
     "print('bpr_prec@{0} \\t bpr_recall@{0}'.format(topK))\n",
@@ -132,36 +123,8 @@
     "for nt in L_vals:\n",
     "    print('-----------------------------------------------------------------------')\n",
     "    for b in b_vals: \n",
-    "        prec, recall, touched = evaluate_LSHTopK(test, n_data, - n_queries, CosineHashFamily, nt, b, dot, topK)\n",
+    "        prec, recall, touched = evaluate_LSHTopK(test, data, -queries, CosineHashFamily, nt, b, dot, topK)\n",
     "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\".format(nt, b, prec/bpr_prec, recall/bpr_recall, touched)) \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "topK = 10\n",
-    "\n",
-    "queries = rec_bpr.U[1:1000,:]\n",
-    "data    = rec_bpr.V\n",
-    "\n",
-    "M = np.linalg.norm(data, axis=1)\n",
-    "max_norm = max(M)\n",
-    "q_norm = np.sqrt((queries * queries).sum(axis=1))\n",
-    "n_queries = queries/q_norm.reshape(queries.shape[0], 1)\n",
-    "\n",
-    "n_data = np.concatenate((data, np.sqrt(max_norm**2 - pow(M, 2)).reshape(data.shape[0], -1)), axis = 1)\n",
-    "n_data = n_data/max_norm # normalized data vectors\n",
-    "n_queries = np.concatenate((n_queries, np.zeros((n_queries.shape[0], 1))), axis = 1)\n",
-    "        \n",
-    "bpr_prec, bpr_recall = evaluate_topK(test, data, queries, topK)\n",
-    "print('bpr_prec@{0} \\t bpr_recall@{0}'.format(topK))\n",
-    "print('{0}\\t{1}'.format(bpr_prec, bpr_recall))\n",
-    "print('-----------------------------------------------------------------------')"
    ]
   },
   {
@@ -186,8 +149,8 @@
    "source": [
     "#rec_ibpr = IBPR(k = 10, max_iter=20, learning_rate=0.01, lamda=0.001, batch_size=5000, init_params={'U':None, 'V':None})\n",
     "#rec_ibpr.fit(eval_method.train_set)\n",
-    "\n",
     "#pickle.dump(rec_ibpr, open('ibpr.model', 'wb'))\n",
+    "\n",
     "rec_ibpr = pickle.load(open('ibpr.model', 'rb'))"
    ]
   },
