clean up the notebooks 	modified:   Part-1-Matrix-Factorization-Recommendation-Retrieval.ipynb 	modified:   Part-2-Scalable-Recommendation-Retrieval-with-Locality-Sensitive-Hashing.ipynb 	modified:   Part-3-Indexable-Representation.ipynb 	modified:   utils/evaluation.py 	modified:   utils/pmf.py

--- a/Part-1-Matrix-Factorization-Recommendation-Retrieval.ipynb
+++ b/Part-1-Matrix-Factorization-Recommendation-Retrieval.ipynb
@@ -199,7 +199,9 @@
     "\n",
     "Given a user query vector $x_u$, the time complexity of linearly scanning through all items is $O(n * d)$, in which:\n",
     "- $n$ is the number of items\n",
-    "- $d$ is the number of factors"
+    "- $d$ is the number of factors\n",
+    "\n",
+    "In this experiment, we measure the time to perform inner product computation as the number of items increases and the number features increases."
    ]
   },
   {
@@ -259,8 +261,13 @@
     "\n",
     "for d in range(pmf.num_feat):\n",
     "    start_time = time.time()\n",
+    "    \n",
+    "    # preference computation \n",
     "    pred = np.matmul(data[:incr_size, :d], q[:d, :])\n",
+    "    \n",
     "    end_time   = time.time()\n",
+    "    \n",
+    "    #average the computation time \n",
     "    computation_time.append((end_time - start_time)/q.shape[1])\n",
     "\n",
     "#plot the computation time as the number of dimension increases\n",
