--- a/Part-2-Scalable-Recommendation-Retrieval-with-Locality-Sensitive-Hashing.ipynb
+++ b/Part-2-Scalable-Recommendation-Retrieval-with-Locality-Sensitive-Hashing.ipynb
@@ -77,7 +77,7 @@
     "# measuring performance of the first 2000 users\n",
     "topK = 10\n",
     "data = pmf_mvl.w_Item\n",
-    "queries = pmf_mvl.w_User[:2000,:]\n",
+    "queries = pmf_mvl.w_User[:1000,:]\n",
     "\n",
     "linear_prec, linear_recall = evaluate_topK(test, data, queries, topK)\n",
     "print('linear_prec@{0} \\t linear_recall@{0}'.format(topK))\n",
@@ -99,9 +99,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Performances without post-processing\n",
-    "\n",
     "In this experiment, we immediately build LSH index on the output of PMF algorithm. You should expect to see the precision and recall degeneration as compared to those of linear scanning solution. Here, we report three values here:\n",
+    "\n",
     "\n",
     "1. relative_prec@10 = $\\frac{\\text{precision@10 of LSH Indexing}}{\\text{precision@10 of linear scanning}}$ \n",
     "&nbsp;\n",
@@ -117,6 +116,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Without Transformation\n",
+    "Since Xbox transformation augments user and item vectors to $(d+1)-$dimensional space. For comparison purpose, we append 0s to each user and item vector. \n",
+    "\\begin{equation}\n",
+    "P(y_i) = [y_i, 0] \n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "Q(x_u) = [x_u, 0]\n",
+    "\\end{equation}\n",
+    "\n",
+    "With this transformation, we have:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "Q(x_u)^T.P(y_i) = x_u^T.y_i\n",
+    "\\end{equation}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -124,32 +144,40 @@
    },
    "outputs": [],
    "source": [
-    "topK = 10\n",
-    "b_vals = [4, 6, 8]\n",
-    "L_vals = [5, 10]\n",
-    "\n",
-    "#queries = pmf_mvl.w_User\n",
-    "#data    = pmf_mvl.w_Item\n",
-    "\n",
-    "print('#table\\t #bit \\t relative_prec@{0} \\t relative_recall@{0} \\t touched'.format(topK))\n",
-    "for nt in L_vals:\n",
-    "    print('-----------------------------------------------------------------------')\n",
-    "    for b in b_vals: \n",
-    "        prec, recall, touched = evaluate_LSHTopK(test, data, -queries, CosineHashFamily, nt, b, dot, topK)\n",
-    "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\".format(nt, b, prec/linear_prec, recall/linear_recall, touched)) \n"
+    "same_queries = np.concatenate((queries, np.zeros((queries.shape[0], 1))), axis = 1)\n",
+    "same_data = np.concatenate((data, np.zeros((data.shape[0], 1))), axis = 1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Performances with post-processing Xbox transformation\n",
+    "### Xbox transformation\n",
     "\n",
     "Now, before building LSH index, we first apply the Xbox transformation for both user and item vectors. This original maximum inner product search on the original representation becomes the maximum cosine similarity search on the new representation.\n",
     "\n",
     "\\begin{equation}\n",
-    "P(y_i) = [y_i, \\sqrt{M^2 - ||y_i||^2}];  Q(x_u) = [x_u, 0]\n",
-    "\\end{equation}\n"
+    "P(y_i) = [y_i, \\sqrt{M^2 - ||y_i||^2}] (M = \\max\\{||y_i||\\})\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "Q(x_u) = [x_u, 0]\n",
+    "\\end{equation}\n",
+    "\n",
+    "We have the following observation:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\frac{Q(x_u)^T.P(y_i)}{||Q(x_u)||.||P(y_i)||} = \\frac{x_u^T.y_i}{M.||x_u||}\n",
+    "\\end{equation}\n",
+    "\n",
+    "i.e., \n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\arg\\max_{1\\leq i\\leq n}{x_u^Ty_i} = \\arg\\max_{1\\leq i\\leq n}\\frac{Q(x_u)^T.P(y_i)}{||Q(x_u)||.||P(y_i)||}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "We Xbox transformation, we effectively convert Maximum Inner Product Search (MIPS) problem to Maximum Cosine Similarity Search (MCCS)."
    ]
   },
   {
@@ -161,27 +189,49 @@
    "outputs": [],
    "source": [
     "#apply Xbox transformation\n",
-    "topK = 10\n",
-    "b_vals = [4, 6, 8]\n",
-    "L_vals = [5, 10]\n",
+    "M = np.linalg.norm(data, axis=1) # compute item vector norms\n",
+    "max_norm = max(M) # max item norm\n",
     "\n",
+    "xbox_data = np.concatenate((data, np.sqrt(max_norm**2 - pow(M, 2)).reshape(data.shape[0], -1)), axis = 1)\n",
+    "xbox_queries = np.concatenate((queries, np.zeros((queries.shape[0], 1))), axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparing LSH performances with vs. without Xbox transformation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "topK = 10 # top-K value\n",
+    "b_vals = [4, 6, 8] # number of hash function\n",
+    "L_vals = [5, 10] #number of hashtables\n",
     "\n",
-    "M = np.linalg.norm(data, axis=1)\n",
-    "max_norm = max(M)\n",
-    "q_norm = np.sqrt((queries * queries).sum(axis=1))\n",
-    "n_queries = queries/q_norm.reshape(queries.shape[0], 1)\n",
-    "\n",
-    "n_data = np.concatenate((data, np.sqrt(max_norm**2 - pow(M, 2)).reshape(data.shape[0], -1)), axis = 1)\n",
-    "n_data = n_data/max_norm # normalized data vectors\n",
-    "n_queries = np.concatenate((n_queries, np.zeros((n_queries.shape[0], 1))), axis = 1)\n",
-    "\n",
-    "print('Done X-box transformation!')\n",
-    "print('#table\\t #bit \\t relative_prec@{0} \\t relative_recall@{0} \\t touched'.format(topK))\n",
+    "print('#table\\t #bit\\t ?Xbox \\t relative_prec@{0} \\t relative_recall@{0} \\t touched'.format(topK))\n",
     "for nt in L_vals:\n",
-    "    print('-----------------------------------------------------------------------')\n",
     "    for b in b_vals: \n",
-    "        prec, recall, touched = evaluate_LSHTopK(test, n_data, -n_queries, CosineHashFamily, nt, b, dot, topK)\n",
-    "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\".format(nt, b, prec/linear_prec, recall/linear_recall, touched)) \n"
+    "        #init lsh index:\n",
+    "        #------ hash-family: the LSH scheme/family \n",
+    "        #------ k          : number of hash functions\n",
+    "        #------ L          : number of hash tables\n",
+    "        lsh_index = LSHIndex(hash_family = CosineHashFamily(same_data.shape[1]), k = b, L=nt)\n",
+    "        \n",
+    "        #performance without employing Xbox transformation\n",
+    "        print('---------------------------------------------------------------------------------')\n",
+    "        prec_1, recall_1, touched_1 = evaluate_LSHTopK(test, same_data, -same_queries, lsh_index, dot, topK)\n",
+    "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\\t{5}\".format(nt, b, 'No',prec_1/linear_prec, recall_1/linear_recall, touched_1)) \n",
+    "        \n",
+    "        #performance with Xbox transformation\n",
+    "        prec_2, recall_2, touched_2 = evaluate_LSHTopK(test, xbox_data, -xbox_queries, lsh_index, dot, topK)\n",
+    "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\\t{5}\".format(nt, b, 'Yes', prec_2/linear_prec, recall_2/linear_recall, touched_2)) "
    ]
   },
   {
