--- a/Part-3-Indexable-Representation.ipynb
+++ b/Part-3-Indexable-Representation.ipynb
@@ -107,24 +107,12 @@
     "#number of recommendations\n",
     "topK = 10\n",
     "\n",
-    "queries = rec_bpr.U[1:1000,:]\n",
-    "data    = rec_bpr.V\n",
+    "bpr_queries = rec_bpr.U[1:1000,:]\n",
+    "bpr_data    = rec_bpr.V\n",
     "        \n",
-    "bpr_prec, bpr_recall = evaluate_topK(test, data, queries, topK)\n",
+    "bpr_prec, bpr_recall = evaluate_topK(test, bpr_data, bpr_queries, topK)\n",
     "print('bpr_prec@{0} \\t bpr_recall@{0}'.format(topK))\n",
-    "print('{0}\\t{1}'.format(bpr_prec, bpr_recall))\n",
-    "print('-----------------------------------------------------------------------')\n",
-    "\n",
-    "topK = 10\n",
-    "b_vals = [4]\n",
-    "L_vals = [10]\n",
-    "\n",
-    "print('#table\\t #bit \\t relative_prec@{0} \\t relative_recall@{0} \\t touched'.format(topK))\n",
-    "for nt in L_vals:\n",
-    "    print('-----------------------------------------------------------------------')\n",
-    "    for b in b_vals: \n",
-    "        prec, recall, touched = evaluate_LSHTopK(test, data, -queries, CosineHashFamily, nt, b, dot, topK)\n",
-    "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\".format(nt, b, prec/bpr_prec, recall/bpr_recall, touched)) \n"
+    "print('{0}\\t{1}'.format(bpr_prec, bpr_recall))"
    ]
   },
   {
@@ -165,24 +153,38 @@
     "#number of recommendations\n",
     "topK = 10\n",
     "\n",
-    "queries = rec_ibpr.U[1:1000, :]\n",
-    "data    = rec_ibpr.V\n",
+    "ibpr_queries = rec_ibpr.U[1:1000, :]\n",
+    "ibpr_data    = rec_ibpr.V\n",
     "\n",
-    "ibpr_prec, ibpr_recall = evaluate_topK(test, data, queries, topK)\n",
+    "ibpr_prec, ibpr_recall = evaluate_topK(test, ibpr_data, ibpr_queries, topK)\n",
     "print('ibpr_prec@{0} \\t ibpr_recall@{0}'.format(topK))\n",
-    "print('{0}\\t{1}'.format(ibpr_prec, ibpr_recall))\n",
-    "print('-----------------------------------------------------------------------')\n",
-    "\n",
+    "print('{0}\\t{1}'.format(ibpr_prec, ibpr_recall))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "topK = 10\n",
     "b_vals = [4]\n",
     "L_vals = [10]\n",
     "\n",
-    "print('#table\\t #bit \\t relative_prec@{0} \\t relative_recall@{0} \\t touched'.format(topK))\n",
+    "print('#table\\t #bit \\t model \\t relative_prec@{0} \\t relative_recall@{0} \\t touched'.format(topK))\n",
     "for nt in L_vals:\n",
     "    print('-----------------------------------------------------------------------')\n",
     "    for b in b_vals: \n",
-    "        prec, recall, touched = evaluate_LSHTopK(test, data, -queries, CosineHashFamily, nt, b, dot, topK)\n",
-    "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\".format(nt, b, prec/ibpr_prec, recall/ibpr_recall, touched)) "
+    "        lsh_index = LSHIndex(hash_family = CosineHashFamily(bpr_data.shape[1]), k = b, L=nt)\n",
+    "        \n",
+    "        lsh_bpr_prec, lsh_bpr_recall, touched_bpr = evaluate_LSHTopK(test, bpr_data, -bpr_queries, lsh_index, dot, topK)\n",
+    "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\\t{5}\".format(nt, b, 'bpr',lsh_bpr_prec/bpr_prec, lsh_bpr_recall/bpr_recall, touched_bpr)) \n",
+    "\n",
+    "        lsh_ibpr_prec, lsh_ibpr_recall, touched_ibpr = evaluate_LSHTopK(test, ibpr_data, -ibpr_queries, lsh_index, dot, topK)\n",
+    "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\\t{5}\".format(nt, b, 'ibpr',lsh_ibpr_prec/ibpr_prec, lsh_ibpr_recall/ibpr_recall, touched_ibpr)) \n",
+    "\n"
    ]
   },
   {
