clean the notebooks 	modified:   Part-1-Matrix-Factorization-Recommendation-Retrieval.ipynb 	modified:   Part-2-Scalable-Recommendation-Retrieval-with-Locality-Sensitive-Hashing.ipynb 	modified:   Part-3-Indexable-Representation.ipynb 	modified:   utils/pmf.py

--- a/Part-1-Matrix-Factorization-Recommendation-Retrieval.ipynb
+++ b/Part-1-Matrix-Factorization-Recommendation-Retrieval.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Two phases of a recommendation system:\n",
+    "Two phases of a matrix factorization recommendation system:\n",
     "1. **Learning phase:** derive a d-dimensional vector $x_u$ for each user $u$ and a d-dimensional vector $y_i$ for each item $i$. The user-item relationship is modelled using the inner product kernel, i.e., the user preference of user $u$ over an item $i$:\n",
     "\n",
     "$$\\mathbf{preference}(u, i) = x_u^Ty_i$$\n",
