--- a/Part-3-Indexable-Representation.ipynb
+++ b/Part-3-Indexable-Representation.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load the Mtrain/test data"
+    "## Load the train/test data"
    ]
   },
   {
@@ -175,7 +175,7 @@
     "\n",
     "print('#table\\t #bit \\t model \\t relative_prec@{0} \\t relative_recall@{0} \\t touched'.format(topK))\n",
     "for nt in L_vals:\n",
-    "    print('-----------------------------------------------------------------------')\n",
+    "    print('------------------------------------------------------------------------------')\n",
     "    for b in b_vals: \n",
     "        lsh_index = LSHIndex(hash_family = CosineHashFamily(bpr_data.shape[1]), k = b, L=nt)\n",
     "        \n",
@@ -183,8 +183,7 @@
     "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\\t{5}\".format(nt, b, 'bpr',lsh_bpr_prec/bpr_prec, lsh_bpr_recall/bpr_recall, touched_bpr)) \n",
     "\n",
     "        lsh_ibpr_prec, lsh_ibpr_recall, touched_ibpr = evaluate_LSHTopK(test, ibpr_data, -ibpr_queries, lsh_index, dot, topK)\n",
-    "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\\t{5}\".format(nt, b, 'ibpr',lsh_ibpr_prec/ibpr_prec, lsh_ibpr_recall/ibpr_recall, touched_ibpr)) \n",
-    "\n"
+    "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\\t{5}\".format(nt, b, 'ibpr',lsh_ibpr_prec/ibpr_prec, lsh_ibpr_recall/ibpr_recall, touched_ibpr)) \n"
    ]
   },
   {
