--- a/Part-2-Scalable-Recommendation-Retrieval-with-Locality-Sensitive-Hashing.ipynb
+++ b/Part-2-Scalable-Recommendation-Retrieval-with-Locality-Sensitive-Hashing.ipynb
@@ -54,13 +54,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The function defined below measure precision and recall value of the top-k recommendation list returned to each user by the model. The result is average over number of users in the testing set."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Performance of Linear Scanning Solution\n",
     "\n",
     "We first measure the precision@10 and recall@10"
@@ -74,7 +67,7 @@
    },
    "outputs": [],
    "source": [
-    "# measuring performance of the first 2000 users\n",
+    "# measuring performance of the first 1000 users\n",
     "topK = 10\n",
     "data = pmf_mvl.w_Item\n",
     "queries = pmf_mvl.w_User[:1000,:]\n",
@@ -99,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this experiment, we immediately build LSH index on the output of PMF algorithm. You should expect to see the precision and recall degeneration as compared to those of linear scanning solution. Here, we report three values here:\n",
+    "In this experiment, we build LSH index on the output of PMF algorithm. You should expect to see the precision and recall degeneration as compared to those of linear scanning solution. Here, we report three values:\n",
     "\n",
     "\n",
     "1. relative_prec@10 = $\\frac{\\text{precision@10 of LSH Indexing}}{\\text{precision@10 of linear scanning}}$ \n",
@@ -152,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Xbox transformation\n",
+    "### With Xbox Transformation\n",
     "\n",
     "Now, before building LSH index, we first apply the Xbox transformation for both user and item vectors. This original maximum inner product search on the original representation becomes the maximum cosine similarity search on the new representation.\n",
     "\n",
