add sklearn in required packages list 	modified:   requirements.txt

--- a/Part-2-Scalable-Recommendation-Retrieval-with-Locality-Sensitive-Hashing.ipynb
+++ b/Part-2-Scalable-Recommendation-Retrieval-with-Locality-Sensitive-Hashing.ipynb
@@ -63,7 +63,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -200,9 +200,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#table\t #bit\t ?Xbox \t relative_prec@10 \t relative_recall@10 \t touched\n",
+      "---------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "topK = 10 # top-K value\n",
     "b_vals = [4, 6, 8] # number of hash function\n",
