--- a/Part-3-Indexable-Representation.ipynb
+++ b/Part-3-Indexable-Representation.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -58,11 +58,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rating_threshold = 1.0\n",
+      "exclude_unknowns = False\n",
+      "Building training set\n",
+      "Number of training users = 6040\n",
+      "Number of training items = 3658\n",
+      "Max rating = 5.0\n",
+      "Min rating = 1.0\n",
+      "Global mean = 3.6\n",
+      "Building test set\n",
+      "Number of tested users = 6040\n",
+      "Number of unknown users = 0\n",
+      "Number of unknown items = 48\n"
+     ]
+    }
+   ],
    "source": [
     "eval_method = BaseMethod.from_provided(train_data=train, test_data=test,\n",
     "                                       exclude_unknowns=False, verbose=True)"
@@ -85,15 +104,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shafling the data\n"
+     ]
+    }
+   ],
    "source": [
-    "#rec_bpr = BPR(k = 10, max_iter=20, learning_rate=0.01, lamda=0.001, batch_size=5000, init_params={'U':None, 'V':None})\n",
-    "#rec_bpr.fit(eval_method.train_set)\n",
-    "#pickle.dump(rec_bpr, open('bpr.model', 'wb'))\n",
+    "rec_bpr = BPR(k = 10, max_iter=20, learning_rate=0.01, lamda=0.001, batch_size=5000, init_params={'U':None, 'V':None})\n",
+    "rec_bpr.fit(eval_method.train_set)\n",
+    "pickle.dump(rec_bpr, open('bpr.model', 'wb'))\n",
     "\n",
-    "rec_bpr = pickle.load(open('bpr.model', 'rb'))"
+    "#rec_bpr = pickle.load(open('bpr.model', 'rb'))"
    ]
   },
   {
