clean three notebooks 	modified:   Part-1-Matrix-Factorization-Recommendation-Retrieval.ipynb 	modified:   Part-2-Scalable-Recommendation-Retrieval-with-Locality-Sensitive-Hashing.ipynb 	modified:   Part-3-Indexable-Representation.ipynb

--- a/Part-3-Indexable-Representation.ipynb
+++ b/Part-3-Indexable-Representation.ipynb
@@ -16,10 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -46,10 +44,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "train   = pickle.load(open('train_data', 'rb'))\n",
@@ -58,30 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rating_threshold = 1.0\n",
-      "exclude_unknowns = False\n",
-      "Building training set\n",
-      "Number of training users = 6040\n",
-      "Number of training items = 3658\n",
-      "Max rating = 5.0\n",
-      "Min rating = 1.0\n",
-      "Global mean = 3.6\n",
-      "Building test set\n",
-      "Number of tested users = 6040\n",
-      "Number of unknown users = 0\n",
-      "Number of unknown items = 48\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "eval_method = BaseMethod.from_provided(train_data=train, test_data=test,\n",
     "                                       exclude_unknowns=False, verbose=True)"
@@ -103,32 +78,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shafling the data\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "rec_bpr = BPR(k = 10, max_iter=20, learning_rate=0.01, lamda=0.001, batch_size=5000, init_params={'U':None, 'V':None})\n",
-    "rec_bpr.fit(eval_method.train_set)\n",
-    "pickle.dump(rec_bpr, open('bpr.model', 'wb'))\n",
+    "#rec_bpr = BPR(k = 10, max_iter=20, learning_rate=0.01, lamda=0.001, batch_size=10000, init_params={'U':None, 'V':None})\n",
+    "#rec_bpr.fit(eval_method.train_set)\n",
+    "#pickle.dump(rec_bpr, open('bpr.model', 'wb'))\n",
     "\n",
-    "#rec_bpr = pickle.load(open('bpr.model', 'rb'))"
+    "rec_bpr = pickle.load(open('bpr.model', 'rb'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#number of recommendations\n",
@@ -156,10 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#rec_ibpr = IBPR(k = 10, max_iter=20, learning_rate=0.01, lamda=0.001, batch_size=5000, init_params={'U':None, 'V':None})\n",
@@ -172,9 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#number of recommendations\n",
@@ -191,26 +150,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "topK = 10\n",
     "b_vals = [4]\n",
     "L_vals = [10]\n",
     "\n",
-    "print('#table\\t #bit \\t model \\t relative_prec@{0} \\t relative_recall@{0} \\t touched'.format(topK))\n",
+    "print('#table\\t #bit \\t model \\t prec@{0} \\t recall@{0} \\t touched'.format(topK))\n",
     "for nt in L_vals:\n",
     "    print('------------------------------------------------------------------------------')\n",
     "    for b in b_vals: \n",
     "        lsh_index = LSHIndex(hash_family = CosineHashFamily(bpr_data.shape[1]), k = b, L=nt)\n",
     "        \n",
     "        lsh_bpr_prec, lsh_bpr_recall, touched_bpr = evaluate_LSHTopK(test, bpr_data, -bpr_queries, lsh_index, dot, topK)\n",
-    "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\\t{5}\".format(nt, b, 'bpr',lsh_bpr_prec/bpr_prec, lsh_bpr_recall/bpr_recall, touched_bpr)) \n",
+    "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\\t{5}\".format(nt, b, 'bpr',lsh_bpr_prec, lsh_bpr_recall, touched_bpr)) \n",
     "\n",
     "        lsh_ibpr_prec, lsh_ibpr_recall, touched_ibpr = evaluate_LSHTopK(test, ibpr_data, -ibpr_queries, lsh_index, dot, topK)\n",
-    "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\\t{5}\".format(nt, b, 'ibpr',lsh_ibpr_prec/ibpr_prec, lsh_ibpr_recall/ibpr_recall, touched_ibpr)) \n"
+    "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\\t{5}\".format(nt, b, 'ibpr',lsh_ibpr_prec, lsh_ibpr_recall, touched_ibpr)) \n"
    ]
   },
   {
