update part3 and clean notebooks 	modified:   Part-1-Matrix-Factorization-Recommendation-Retrieval.ipynb 	modified:   Part-2-Scalable-Recommendation-Retrieval-with-Locality-Sensitive-Hashing.ipynb 	modified:   Part-3-Indexable-Representation.ipynb 	modified:   bpr.model 	modified:   ibpr.model 	new file:   part3_test_data 	new file:   part3_train_data

--- a/Part-3-Indexable-Representation.ipynb
+++ b/Part-3-Indexable-Representation.ipynb
@@ -48,8 +48,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train   = pickle.load(open('train_data', 'rb'))\n",
-    "test    = pickle.load(open('test_data', 'rb'))"
+    "train   = pickle.load(open('part3_train_data', 'rb'))\n",
+    "test    = pickle.load(open('part3_test_data', 'rb'))"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#rec_bpr = BPR(k = 10, max_iter=20, learning_rate=0.01, lamda=0.001, batch_size=10000, init_params={'U':None, 'V':None})\n",
+    "#rec_bpr = BPR(k = 100, max_iter = 100, learning_rate=0.01, lamda=0.001, init_params={'U':None, 'V':None})\n",
     "#rec_bpr.fit(eval_method.train_set)\n",
     "#pickle.dump(rec_bpr, open('bpr.model', 'wb'))\n",
     "\n",
@@ -97,9 +97,9 @@
     "#number of recommendations\n",
     "topK = 10\n",
     "\n",
-    "bpr_queries = rec_bpr.U[1:1000,:]\n",
+    "bpr_queries = rec_bpr.U\n",
     "bpr_data    = rec_bpr.V\n",
-    "        \n",
+    "\n",
     "bpr_prec, bpr_recall = evaluate_topK(test, bpr_data, bpr_queries, topK)\n",
     "print('bpr_prec@{0} \\t bpr_recall@{0}'.format(topK))\n",
     "print('{0}\\t{1}'.format(bpr_prec, bpr_recall))"
@@ -119,11 +119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#rec_ibpr = IBPR(k = 10, max_iter=20, learning_rate=0.01, lamda=0.001, batch_size=10000, init_params={'U':None, 'V':None})\n",
+    "#rec_ibpr = IBPR(k = 100, max_iter = 100, learning_rate = 0.01, lamda=0.001, init_params={'U':None, 'V':None})\n",
     "#rec_ibpr.fit(eval_method.train_set)\n",
     "#pickle.dump(rec_ibpr, open('ibpr.model', 'wb'))\n",
     "\n",
@@ -139,7 +139,7 @@
     "#number of recommendations\n",
     "topK = 10\n",
     "\n",
-    "ibpr_queries = rec_ibpr.U[1:1000, :]\n",
+    "ibpr_queries = rec_ibpr.U\n",
     "ibpr_data    = rec_ibpr.V\n",
     "\n",
     "ibpr_prec, ibpr_recall = evaluate_topK(test, ibpr_data, ibpr_queries, topK)\n",
@@ -155,18 +155,18 @@
    "source": [
     "topK = 10\n",
     "b_vals = [4]\n",
-    "L_vals = [10]\n",
+    "L_vals = [5]\n",
     "\n",
     "print('#table\\t #bit \\t model \\t prec@{0} \\t recall@{0} \\t touched'.format(topK))\n",
     "for nt in L_vals:\n",
     "    print('------------------------------------------------------------------------------')\n",
     "    for b in b_vals: \n",
-    "        lsh_index = LSHIndex(hash_family = CosineHashFamily(bpr_data.shape[1]), k = b, L=nt)\n",
+    "        lsh_index = LSHIndex(hash_family = CosineHashFamily(bpr_data.shape[1]), k = b, L = nt)\n",
     "        \n",
     "        lsh_bpr_prec, lsh_bpr_recall, touched_bpr = evaluate_LSHTopK(test, bpr_data, -bpr_queries, lsh_index, dot, topK)\n",
-    "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\\t{5}\".format(nt, b, 'bpr',lsh_bpr_prec, lsh_bpr_recall, touched_bpr)) \n",
+    "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\\t{5}\".format(nt, b, 'bpr', lsh_bpr_prec, lsh_bpr_recall, touched_bpr)) \n",
     "\n",
-    "        lsh_ibpr_prec, lsh_ibpr_recall, touched_ibpr = evaluate_LSHTopK(test, ibpr_data, -ibpr_queries, lsh_index, dot, topK)\n",
+    "        lsh_ibpr_prec, lsh_ibpr_recall, touched_ibpr = evaluate_LSHTopK(test, ibpr_data, ibpr_queries, lsh_index, cosine_distance, topK)\n",
     "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\\t{5}\".format(nt, b, 'ibpr',lsh_ibpr_prec, lsh_ibpr_recall, touched_ibpr)) \n"
    ]
   },
@@ -196,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
